# 3am-reproduction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: full_reproduction.yaml  scannetpp_continuous.yaml  wlh_test.yaml
docs/: reproduction.md  training_changes.md
notebooks/: 3am_reproduction_tutorial.ipynb  infer.ipynb
paper/arXiv-2601.08831v5/: 00README.json  00_abstract.tex  01_intro.tex  02_related.tex  03_method.tex  04_experiments.tex  10_conclusion.tex  12_appendix.tex  main.tex
paper/arXiv-2601.08831v5/paper_cn/: 00_abstract.tex  01_intro.tex  02_related.tex  03_method.tex  04_experiments.tex  10_conclusion.tex  12_appendix.tex  main.aux  main.bbl  main.bib  main.out  main.tex
scripts/: audit_masks.py  build_manifest.py  download_datasets.py  download_weights.py  evaluate_2d.py  infer_3am_tracking_video.py  install_external.sh  precompute_must3r_features.py  prepare_scannetpp_training_data.py  preprocess_scannetpp_instance_masks.py  render_shapenet_tracking_video.py  run_3d_instance_segmentation.py  train_3am.py
src/three_am/: __init__.py  __main__.py
src/three_am/data/: io.py  sampling.py  schema.py
tests/: test_adapters.py  test_audit_masks_script.py  test_build_manifest.py  test_feature_merger.py  test_infer_3am_tracking_video.py  test_infer_notebook.py  test_metrics.py  test_precompute_must3r_features.py  test_prepare_scannetpp_training_data.py  test_preprocess_scannetpp_instance_masks.py  test_render_shapenet_tracking_video.py  test_sampling.py  test_train_3am_script.py  test_training_dataset.py  test_training_losses.py
(+10 files in other folders)
