[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "three-am-repro"
version = "0.1.0"
description = "Unofficial reproduction scaffold for 3AM: 3egment Anything with Geometric Consistency in Videos"
readme = "docs/reproduction.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "Pillow>=9.5",
  "PyYAML>=6.0",
  "tqdm>=4.65",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "nbformat>=5.9"]
notebook = ["jupyter>=1.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
